--- a/src/styles/scss/partials/_header.resp.scss
+++ b/src/styles/scss/partials/_header.resp.scss
@@ -251,8 +251,10 @@
 @media only screen and (max-width: 570px) {
     #bottom-nav {
         div {
+            box-sizing: border-box;
+
             & > a { 
-                flex-basis: 83.5% !important;
+                flex-basis: 83% !important;
             }
             
             & > .expand {
